[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Player/Assets/knight_m_hit_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Assets/knight_m_run_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player/Assets/knight_m_run_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player/Assets/knight_m_run_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Player/Assets/knight_m_idle_anim_f2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Player/Assets/knight_m_run_anim_f2.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Player/Assets/knight_m_idle_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Player/Assets/knight_m_idle_anim_f1.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Player/Assets/knight_m_idle_anim_f0.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Player/Sounds/take_damage.mp3" type="AudioStream" id=11]
[ext_resource path="res://Scenes/Player/Sounds/footstep.mp3" type="AudioStream" id=12]
[ext_resource path="res://Scenes/Player/Sounds/mixkit-player-losing-or-failing-2042.wav" type="AudioStream" id=13]
[ext_resource path="res://Scenes/Player/Sounds/axe.wav" type="AudioStream" id=14]
[ext_resource path="res://Scenes/Player/Assets/knight_m_death_anim_f0.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Player/Assets/knight_m_death_anim_f1.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Player/Assets/knight_m_death_anim_f2.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Player/Assets/knight_m_death_anim_f3.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Player/Assets/knight_m_death_anim_f4.png" type="Texture" id=19]
[ext_resource path="res://Scenes/Player/Assets/knight_m_death_anim_f5.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.37277, 7.32046 )

[sub_resource type="Curve" id=3]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, -281.455 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
max_value = 2.0
_data = [ Vector2( 0, 1.91591 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.756818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.212996, 0.256318, 1 )
colors = PoolColorArray( 0.740683, 0.765137, 0.340725, 1, 0.796661, 0.839355, 0.098362, 1, 0.972549, 0, 0, 0.282353 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 5, 5 )
z_index = 1
collision_mask = 8
collision/safe_margin = 1.0
script = ExtResource( 10 )

[node name="Skin" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "death"
offset = Vector2( 0, -6 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.937345, -0.966059 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.283154, -9.5984 )
scale = Vector2( 0.509186, 0.518624 )

[node name="BasicAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="PortalSpearAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="LightningAttackTimer" type="Timer" parent="."]
one_shot = true

[node name="DashDuration" type="Timer" parent="."]
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]

[node name="Invicibility" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DamageAnimation" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FallDuration" type="Timer" parent="."]
one_shot = true

[node name="DamageParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.15
one_shot = true
explosiveness = 0.92
randomness = 1.0
lifetime_randomness = 0.1
draw_order = 1
emission_shape = 2
emission_rect_extents = Vector2( 4, 5 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 10 )
initial_velocity = 50.0
angular_velocity = 44.97
angular_velocity_random = 0.7
orbit_velocity = 0.1
radial_accel = 42.68
radial_accel_random = 1.0
damping = 79.62
damping_random = 1.0
angle_curve = SubResource( 3 )
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )
anim_offset_random = 1.0

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -40.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -35.0

[node name="ThrowAxe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -40.0

[connection signal="animation_finished" from="Skin" to="." method="_on_Skin_animation_finished"]
[connection signal="timeout" from="BasicAttackTimer" to="." method="_on_BasicAttackTimer_timeout"]
[connection signal="timeout" from="PortalSpearAttackTimer" to="." method="_on_PortalSpearAttackTimer_timeout"]
[connection signal="timeout" from="LightningAttackTimer" to="." method="_on_LightningAttackTimer_timeout"]
[connection signal="timeout" from="DashDuration" to="." method="_on_DashDuration_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="Invicibility" to="." method="_on_Invicibility_timeout"]
[connection signal="timeout" from="DamageAnimation" to="." method="_on_DamageAnimation_timeout"]
[connection signal="timeout" from="FallDuration" to="." method="_on_FallDuration_timeout"]
